OpenVDB Version History
=======================

Version 6.0.1 - In development

    New features:
    - Added new QuatTraits, MatTraits and ValueTraits type traits to complement
      VecTraits and added an IsSpecializationOf helper metafunction.

    Improvements:
    - Significantly improved the performance of point data grid string
      attribute generation.
    - AttributeArray::copy() and the copy assignment operator for
      AttributeArrays are now thread-safe.
    - The command-line tools (vdb_print, etc.) now include the library
      ABI version in their -version output.

    Bug fixes:
    - Fixed a bug in tools::clip() that caused some grid metadata
      to be discarded.
    - Added a check to points::setGroup to compare the maximum index of the
      provided PointIndexTree to the size of the membership vector.
    - Fixed a race condition when moving points in point data grids for ABI=6+
      due to non-const access of AttributeArrays resulting in a copy-on-write.
    - Fix bug with MeshToVoxel consuming infinite memory when giving NaNs.

    Houdini:
    - The Points Convert SOP now reports NaN Positions as warnings when
      converting from Houdini Points to VDB Points.
    - Fixed a bug where the Points Convert SOP was incorrectly ignoring
      point attributes with the same name as an existing point group.
    - The Transform SOP now supports frustum transforms by applying the
      transformation to the internal affine map.

    Python:
    - Added limited support for PointDataGrids to the Python module,
      offering I/O and metadata functionality for now.


Version 6.0.0 - December 18, 2018

      Some changes in this release (see "ABI changes" below) alter
      the grid ABI so that it is incompatible with earlier versions
      of the OpenVDB library, such as the ones built into Houdini
      up to and including Houdini 17.  To preserve ABI compatibility,
      when compiling OpenVDB or any dependent code define the macro