@@ -14,6 +14,9 @@ New features:
   @vdblink::VecTraits VecTraits@endlink and added an
   @vdblink::IsSpecializationOf IsSpecializationOf@endlink
   helper metafunction.
+- Added support for @vdblink::Vec4SMetadata Vec4s@endlink,
+  @vdblink::Vec4DMetadata Vec4d@endlink
+  and @vdblink::Vec4IMetadata Vec4i@endlink metadata.
 
 @par
 Improvements:
